src/test/deca/syntaxe_contextuelle/invalid/test_pass_3_opArith_left_operand_not_arith.deca
// Description:
//    Program testing that you can not do an arith operation with a left operand that can not be operated
//
// Results:
//    error
//
// History:
//    Created on 9/01/2025

{
    int x = true + 1;
}
